
[metadata]
name = pylsp-gpt
version = 0.1
author = Spencer Nelson
author_email = spencer@spencerwnelson.com
url = https>//github.com/spenczar/pylsp-gpt
description = python-lsp-server plugin for code actions backed by GPT
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: BSD License


[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_gpt = pylsp_gpt.plugin


[options.extras_require]
dev =
    pytest
    build
    twine
